--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "hrtool",
   "version": "0.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express.io": "^1.1.13",
-    "node": "0.0.0",
-    "nodemon": "^1.2.1"
+  "dependencies": {
+    "express": "^4.7.2",
+    "socket.io": "^1.0.6"
   }
 }
