--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "dependencies": {
     "express.io": "~1.1.13",
-    "easy-pg": "~1.0.1"
+    "easy-pg": "~1.0.1",
+    "debug": "~1.0.4"
   }
 }
