--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express.io": "~1.1.13",
     "easy-pg": "~1.0.1",
-    "debug": "~1.0.4"
+    "debug": "~1.0.4",
+    "passport": "~0.2.0"
   }
 }
