automaticke smerovani, klient dostava object usera

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express.io": "~1.1.13",
     "easy-pg": "~1.0.1",
     "debug": "~1.0.4",
-    "passport": "~0.2.0"
+    "passport": "~0.2.0",
+    "passport-google": "~0.3.0"
   }
 }
