Google login - upraveny pripominky (host pridan do config_example.json)

--- a/config_example.json
+++ b/config_example.json
@@ -1,4 +1,5 @@
 {
-    "port"              : 8080,
-    "conString"  : "pg://postgres:database@localhost:5433/hrtool_database"
+    "host"      : "http://localhost",
+    "port"      : 8080,
+    "conString" : "pg://postgres:database@localhost:5433/hrtool_database"
 }
