--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "ISC",
   "dependencies": {
-    "express.io": "~1.1.13",
-    "easy-pg": "~1.0.1",
+    "coffee-script": "^1.7.1",
     "debug": "~1.0.4",
-    "nodemon": "^1.2.1"
+    "easy-pg": "~1.0.1",
+    "express.io": "^1.1.13",
+    "nodemon": "^1.2.1",
+    "socket.io": "^1.0.6"
   }
 }
