us40417 version 1.0 done

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~1.0.4",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-    "csv-parse": "0.0.6"
+    "csv-parse": "0.0.6",
+    "express.io-middleware": "~0.9.4"
   }
 }
