--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "socket.io": "^1.0.6",
     "debug": "~1.0.4",
     "passport": "~0.2.0",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "express.io-middleware": "~0.9.4"
+    
   }
 }
