--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "debug": "~1.0.4",
     "easy-pg": "~1.0.1",
     "express.io": "^1.1.13",
-    "express.io-middleware": "^0.9.4",
     "nodemon": "^1.2.1",
+    "socket.io": "^1.0.6",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
+   
     "lodash-node": "~2.4.1"
   }
 }
