--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "hrtool",
-  "version": "0.0.0",
-  "main": "index.js",
-  "license": "ISC",
-  "dependencies": {
-    "coffee-script": "^1.7.1",
-    "easy-pg": "~1.0.1",
-    "express.io": "^1.1.13",
-    "nodemon": "^1.2.1",
-    "debug": "~1.0.4",
-    "passport": "~0.2.0",
-    "passport-google": "~0.3.0",
-    "csv-parse": "0.0.6",
-    "express.io-middleware": "~0.9.4"
+    "name": "hrtool",
+    "version": "0.0.0",
+    "main": "index.js",
+    "license": "ISC",
+    "dependencies": {
+        "coffee-script": "^1.7.1",
+        "easy-pg": "~1.0.1",
+        "express.io": "^1.1.13",
+        "nodemon": "^1.2.1",
+        "debug": "~1.0.4",
+        "passport": "~0.2.0",
+        "passport-google": "~0.3.0",
+        "csv-parse": "0.0.6",
+        "express.io-middleware": "~0.9.4",
+        "async": "~0.9.0"
   }
 }
