--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express.io-middleware": "^0.9.4",
     "nodemon": "^1.2.1",
     "passport": "~0.2.0",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "lodash-node": "~2.4.1"
   }
 }
