--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "socket.io": "^1.0.6",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-   
+    "express.io-middleware": "~0.9.4",
     "lodash-node": "~2.4.1"
   }
 }
