--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
     "passport-google": "~0.3.0",
     "express.io-middleware": "~0.9.4",
     "lodash-node": "~2.4.1"
+  },
+  "devDependencies": {
+    "glob": "^4.0.5",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-webpack": "^1.0.8",
+    "webpack": "^1.4.0-beta2",
+    "webpack-dev-server": "^1.6.1"
   }
 }
