--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-webpack": "^1.0.8",
-    "webpack": "^1.4.0-beta2",
-    "webpack-dev-server": "^1.6.1"
+    "jade": "^1.2.0",
+    "jade-loader": "^0.6.1",
+    "webpack": "^1.4.0-beta2"
   }
+  
 }
