--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "debug": "~1.0.4",
     "easy-pg": "~1.0.1",
     "express.io": "^1.1.13",
+    "express.io-middleware": "~0.9.4",
+    "lodash-node": "~2.4.1",
     "nodemon": "^1.2.1",
-    "socket.io": "^1.0.6",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-    "express.io-middleware": "~0.9.4",
-    "lodash-node": "~2.4.1"
+    "socket.io": "^1.0.6"
   },
   "devDependencies": {
+    "jade-loader": "git+https://github.com/davidmoravek/jade-loader.git",
     "glob": "^4.0.5",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -25,9 +26,6 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-webpack": "^1.0.8",
-    "jade": "^1.2.0",
-    "jade-loader": "^0.6.1",
     "webpack": "^1.4.0-beta2"
   }
-  
 }
