--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hrtool",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "index.coffee",
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
