--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "nodemon": "^1.2.1",
     "passport": "~0.2.0",
     "passport-google": "~0.3.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "nodemailer": "~1.3.0",
+    "to-csv": "0.0.3",
+    "node-schedule": "~0.1.13"
   },
   "devDependencies": {
     "glob": "^4.0.5",
