--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "socket.io": "^1.0.6",
     "nodemailer": "~1.3.0",
     "to-csv": "0.0.3",
-    "node-schedule": "~0.1.13"
+    "node-schedule": "~0.1.13",
+    "moment": "~2.8.4"
   },
   "devDependencies": {
     "glob": "^4.0.5",
